--- a/public-html/aula1/exercicio/index.html
+++ b/public-html/aula1/exercicio/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CURSO HTML/CSS – BOX MODEL</title>
+    <title>CURSO HTML/CSS – ESTA É UMA PÁGINA INDEX</title>
   </head>
   <body>
-    <div>Aqui está um simples div</div>
+    <div>Esta é a primeira div.</div>
+    <div>Esta é a segunda div2.</div>
   </body>
 </html>
