--- a/public-html/aula3/exercicio/exercicio4.html
+++ b/public-html/aula3/exercicio/exercicio4.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CURSO HTML/CSS – ESTA É UMA PÁGINA INDEX</title>
+    <title>Document</title>
   </head>
+  <style></style>
   <body>
-    <div>Esta é a segunda div</div>
+    <header></header>
+    <main></main>
+    <footer></footer>
   </body>
 </html>
