removendo o dashed do header

--- a/ciclo1/desafio 1/index.html
+++ b/ciclo1/desafio 1/index.html
@@ -23,7 +23,7 @@
 
     <main class="flex">
       <div class="container flex">
-        <p>
+        <p id="text-main">
           "Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam
           tempore blanditiis sequi assumenda dolores sit autem, aliquam vel
           totam corporis fugiat a culpa iste animi, odio voluptatum id eaque
