--- a/ciclo1/desafio2/index.html
+++ b/ciclo1/desafio2/index.html
@@ -1,42 +1,42 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./estilos/style.css" />
-    <title>Desafio 2 | Ciclo 1</title>
-  </head>
-  <body>
-    <header class="flex">
-      <h1>ME ACHA!</h1>
-      <h4>ENCONTRE UM ENDEREÇO PELO NÚMERO DE CEP</h4>
-    </header>
-    <main class="flex">
-      <img
-        src="./assets/baseline_travel_explore_black_24dp.png"
-        alt="icone logo Google "
-      />
-      <section>
-        <form class="flex">
-          <label for="Cep">Cep</label>
-          <input type="text" id="Cep" name="Cep" />
 
-          <label for="Rua">Rua</label>
-          <input type="text" id="Rua" name="Rua" />
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./estilos/style.css" />
+  <title>Desafio 2 | Ciclo 1</title>
+</head>
 
-          <label for="Bairro">Bairro</label>
-          <input type="text" id="Bairro" name="Bairro" />
+<body>
+  <header class="flex">
+    <h1>ME ACHA!</h1>
+    <h4>ENCONTRE UM ENDEREÇO PELO NÚMERO DE CEP</h4>
+  </header>
+  <main class="flex">
+    <img src="./assets/baseline_travel_explore_black_24dp.png" alt="icone logo Google " />
+    <section>
+      <form class="flex">
+        <label for="Cep">Cep</label>
+        <input type="text" id="Cep" name="Cep" />
 
-          <label for="Cidade">Cidade</label>
-          <input type="text" id="Cidade" name="Cidade" />
+        <label for="Rua">Rua</label>
+        <input type="text" id="Rua" name="Rua" />
 
-          <label for="Estado">Estado</label>
-          <input type="text" id="Estado" name="Estado" />
+        <label for="Bairro">Bairro</label>
+        <input type="text" id="Bairro" name="Bairro" />
 
-          <button type="submit">BUSCAR</button>
-        </form>
-      </section>
-    </main>
-  </body>
+        <label for="Cidade">Cidade</label>
+        <input type="text" id="Cidade" name="Cidade" />
+
+        <label for="Estado">Estado</label>
+        <input type="text" id="Estado" name="Estado" />
+
+        <button type="submit">BUSCAR</button>
+      </form>
+    </section>
+  </main>
+</body>
+
 </html>
