--- a/Ciclo 2 - Códigos-fonte/aula17/dataset/index.html
+++ b/Ciclo 2 - Códigos-fonte/aula17/dataset/index.html
@@ -22,7 +22,7 @@
  }
 </script>
 <body>
-    <input type="text" data-codigo="38" data-statuscli='ativo'  name="nomeCliente" value="Marcelo W" id="nomeCliente" >
+    <input type="text" data-codigo="38" data-statuscli='ativo2'  name="nomeCliente" value="Marcelo W" id="nomeCliente" >
     <input type="button" value="BUSCAR" name=buscar id="btnBuscar" >
 </body>
 </html>
